--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <li><a href="https://drive.google.com/file/d/1J6ySlxpKvAmYqiy3s5xYXmwt8qB-j7UR/view?usp=sharing" target="_blank"><i class="bx bx-cloud-download"></i> <span>Download CV</span></a></li>
                 <li><a href="https://bagusfe.id/blog" target="_blank"><i class="bx bx-book"></i> <span>Read Blog</span></a></li>
                 <li><a href="https://toko.bagusfe.id" target="_blank"><i class="bx bx-store"></i> <span>My Store</span></a></li>
-                <li><a href="https://saweria.co/bagusfe" target="_blank"><i class="bx bx-money"></i> <span>Donate</span></a></li>
+                <li><a href="https://saweria.co/bagusfe" target="_blank"><i class="bx bx-money"></i> <span>Support</span></a></li>
             </ul>
         </nav>
         <!-- .nav-menu -->
@@ -56,7 +56,7 @@
     <!-- ======= Hero Section ======= -->
     <section id="hero" class="d-flex flex-column justify-content-center">
         <div class="container" data-aos="zoom-in" data-aos-delay="100">
-            <p>My name is
+            <p>Hi, my name is
             </p>
             <h1>Bagus Frayoga E</h1>
             <p>I'm <span class="typed" data-typed-items="an Engineer, a Mobile Developer, a Good Talent!"></span></p>
@@ -71,16 +71,15 @@
     <!-- End Hero -->
 
     <main id="main">
-
         <!-- ======= About Section ======= -->
         <section id="about" class="about">
             <div class="container" data-aos="fade-up">
 
                 <div class="section-title">
                     <h2>About me</h2>
-                    <p><b>Hi there</b>, my name is Bagus Frayoga Effendi, an Electronic Engineer also a Mobile Developer based on Jakarta. I am a humble, responsible, tidy, organize, hard worker also a team player that seeking for excellence and love to
-                        know new things. My weakness is speak in front of people because sometimes I feel not confident or people around me will judge me but I keep on trying to handle this by making a video blog and posted it on my youtube channel also
-                        expand my knowledge so I could be more confident to speak about a particular topic.</p>
+                    <p><b>Hi there</b>, my name is Bagus Frayoga Effendi, an Electronic Engineer also a Mobile Developer based on Jakarta. I am a humble, responsible, honest, tidy, organize, hard worker also a team player that seeking for excellence and love to
+                        know new things. My weakness is less assertive also
+                        a bit shy person to speak in front of by I always trying to expand my knowledge so I could be more confident to speak about a particular topic.</p>
                 </div>
 
                 <div class="row">
@@ -113,9 +112,9 @@
                                 </ul>
                             </div>
                         </div>
-                        <p>
+                        <!-- <p>
                             ...
-                        </p>
+                        </p> -->
                     </div>
                 </div>
 
@@ -131,7 +130,7 @@
                 <div class="section-title">
                     <h2>Resume</h2>
                     <p>My career journey started on Aug 2018 when I was graduated from college in Salatiga and then I moved to Surabaya and working as an Internship Engineer for Automation Machine (learn a lot like; PLC, Inverter, Motor, Sensor) after finished
-                        my intern I move to work in a manufacture company as a Supervisor Production based on Surabaya. My latest work experience, I work as a Technical Support based on Jakarta on 2019.</p>
+                        my intern I moved to another company and working as a Supervisor Production in a Manufacture Company PT Pitamas Indonusa from March 2019 to July 2019. My main responsibilities was monitoring and handling production proccess, making sure the target production reached, and preparing the product to shipping by coordinate with the warehouse supervisor. After that, worked in PT Lautan Solusi Airindo from November 2019 to June 2020 as a Technical Support. My main responsibilities was installing water filter or reverse osmosis filter for home scale, designing and surveying to customer house to check the water quality (sample check was in our laboratory) so that we can suggest what the best solution for customer's water problem. </p>
                 </div>
 
                 <div class="row">
@@ -139,7 +138,7 @@
                         <h3 class="resume-title icofont-papers"> Summary</h3>
                         <div class="resume-item pb-0">
                             <h4>Bagus Frayoga Effendi, S.T</h4>
-                            <p><em>I am a humble, responsible, tidy, organize, hard worker also a team player that seeking for excellence and love to know new things.</em></p>
+                            <p><em>I am a humble, responsible, tidy, organize, hard worker also a team player that seeking for excellence and love to know new things. My hobby was swimming and playing some music instrument like ukulele and bass guitar, I did some bass cover, you can check it out at <a href="http://yt.bagusfe.id">My Youtube Channel.<a/></em></p>
                             <ul>
                                 <li>Banjarmasin - Jakarta, ID</li>
                                 <li>(0812) 5051-0066</li>
@@ -162,7 +161,9 @@
                             <p><b>Event Experiences</b></p>
                             <ul>
                                 <li><b>2017 ></b> Annual Chrismast Celebration in Campuss as Event Arranger. </li>
+                                <li><b>2017 ></b> Comitte of annual event "Malam Temu FTEK" in my campuss. Check photos of the event <a href="http://instagram.com/malamtemu">here. </a> </li>
                                 <li><b>2016 ></b> Annual Christmast Celebrate in Campuss as Publication and Documentation.</li>
+                                <li><b>2014 ></b> Comittee of a National Programming Contest ECEPC 2014, the article can be <a href="https://www.uksw.edu/detail_post/news/gali-potensi-siswa-sma-ftek-kembali-gelar-ecepc">read here.</a> </li>
                             </ul>
 
 
@@ -295,6 +296,12 @@
                                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
+                        <div class="progress">
+                            <span class="skill">RESTful API <i class="val">75%</i></span>
+                            <div class="progress-bar-wrap">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div>
 
 
                     </div>
@@ -327,6 +334,12 @@
                                 <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
+                        <div class="progress">
+                            <span class="skill">Internet of Things (IoT) <i class="val">70%</i></span>
+                            <div class="progress-bar-wrap">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div>
 
                     </div>
 
@@ -350,21 +363,21 @@
                     <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
                         <ul id="portfolio-flters">
                             <li data-filter="*" class="filter-active">All</li>
-                            <li data-filter=".filter-app">Awards</li>
-                            <li data-filter=".filter-card">Campuss</li>
-                            <li data-filter=".filter-web">Certified</li>
+                            <li data-filter=".filter-award">Awards</li>
+                            <li data-filter=".filter-campuss">Campuss</li>
+                            <li data-filter=".filter-certificate">Certificates</li>
                         </ul>
                     </div>
                 </div>
 
                 <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-award">
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <h4>Juara 1 Lomba Karya Tulis Ilmiah</h4>
-                                <p>Pernah mendapatkan award memenangkan lomba karya tulis ilmiah group tingkat Universitas.</p>
+                                <h4>First Winner of Paper Science with group.</h4>
+                                <p>Achieving award for best idea and paper science. </p>
                                 <div class="portfolio-links">
                                     <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="View Photo"><i class="bx bx-plus"></i></a>
                                     <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -373,12 +386,12 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-award">
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <h4>Juara 3 Lomba Karya Tulis Ilmiah Individu</h4>
-                                <p>Mengikuti lomba Karya Tulis Ilmiah tingkat Universitas dan mendapatkan juara 3.</p>
+                                <h4>Third winner for science paper competition at University</h4>
+                                <p>Call for paper : “Sustainable Development”</p>
                                 <div class="portfolio-links">
                                     <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox" title="View Photo"><i class="bx bx-plus"></i></a>
                                     <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -387,12 +400,12 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-campuss">
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
                             <div class="portfolio-info">
                                 <h4>Freelance Trainer at Arkademy.com </h4>
-                                <p>as a Trainer: Teaching Internet of Things (IoT). </p>
+                                <p>Experienced as Trainer: Teaching Internet of Things (IoT) to Vocational School of Telkom Indonesia. </p>
                                 <div class="portfolio-links">
                                     <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox" title="View Photo"><i class="bx bx-plus"></i></a>
                                     <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -401,12 +414,12 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-campuss">
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
                             <div class="portfolio-info">
                                 <h4>Campuss Promotion Team</h4>
-                                <p>Promoting my university to student around high school in Central Java</p>
+                                <p>Promoting my university to high school school in Central Java</p>
                                 <div class="portfolio-links">
                                     <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox" title="View Photo"><i class="bx bx-plus"></i></a>
                                     <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -415,12 +428,12 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-campuss">
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
                             <div class="portfolio-info">
                                 <h4>Christmast Commitee Campus</h4>
-                                <p>an annual christmas celebration</p>
+                                <p>Being Comittee of an annual christmas celebration in Campuss</p>
                                 <div class="portfolio-links">
                                     <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox" title="View Photo"><i class="bx bx-plus"></i></a>
                                     <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -429,12 +442,12 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-certificate">
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
                             <div class="portfolio-info">
                                 <h4>Gapura Digital by Grow With Google </h4>
-                                <p>Mengikuti pelatihan online tentang Google My Business untuk buka usaha.</p>
+                                <p>Attended an Online Workshop about My Google Business.</p>
                                 <div class="portfolio-links">
                                     <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox" title="View Photo"><i class="bx bx-plus"></i></a>
                                     <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -443,12 +456,12 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-certificate">
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
                             <div class="portfolio-info">
                                 <h4>Dicoding.com | Object-Oriented Programming </h4>
-                                <p>Mengikuti kursus online tentang Belajar Prinsip Pemrograman S.O.L.I.D. </p>
+                                <p>Online Course: Learned S.O.L.I.D Programming Principle </p>
                                 <div class="portfolio-links">
                                     <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox" title="View Photo"><i class="bx bx-plus"></i></a>
                                     <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -470,7 +483,7 @@
     <footer id="footer">
         <div class="container">
             <h3>Bagus Frayoga Effendi, S.T</h3>
-            <p>Aku hendak bersyukur kepada-Mu selama-lamanya, sebab Engkaulah yang bertindak; karena nama-Mu baik, aku hendak memasyhurkannya di depan orang-orang yang Kaukasihi! ~ Mazmur 52:9</p>
+            <p>I will give you praise without end for what you have done; I will give honour to your name before your saints, for it is good. ~ Mazmur 52:9</p>
             <div class="social-links">
                 <a href="http://twitter.com/bagusfedotid" class="twitter"><i class="bx bxl-twitter"></i></a>
                 <a href="http://yt.bagusfe.id" class="youtube"><i class="bx bxl-youtube"></i></a>
