--- a/index.html
+++ b/index.html
@@ -92,8 +92,16 @@
                             I got my Bachelor Degree from Satya Wacana Christian University major in Electronic Engineer on 2018. Beside of my Engineer background I also have great understanding in Web Programming, React Native and iOS Development. Now, I am still learning about
                             SwiftUI and React Native. If you interested about my profile, don't hesitate to ask and wish to be hire! ^^
                         </p>
-                        <div class="row">
-                            <div class="col-lg-6">
+                        <p>
+  
+  <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+    Information
+  </button>
+</p>
+<div class="collapse" id="collapseExample">
+  <div class="card card-body">
+    <div class="row">
+                     <div class="col-lg-6">
                                 <ul>
                                     <li><i class="icofont-rounded-right"></i> <strong>Name		:</strong> Bagus Frayoga E, S.T</li>
                                     <li><i class="icofont-rounded-right"></i> <strong>Gender		:</strong> Male</li>
@@ -112,6 +120,9 @@
                                 </ul>
                             </div>
                         </div>
+  </div>
+</div>
+                        
                         <!-- <p>
                             ...
                         </p> -->
