--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
                             SwiftUI and React Native. If you interested about my profile, don't hesitate to ask and wish to be hire! ^^
                         </p>
                         <p>
-  
   <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
     Information
   </button>
+  <button type="button" class="btn btn-success"><a href="mailto:hi@bagusfe.id">Success</a></button>
 </p>
 <div class="collapse" id="collapseExample">
   <div class="card card-body">
