--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
     Information
   </button>
-  <button type="button" class="btn btn-success"><a href="mailto:hi@bagusfe.id">Success</a></button>
+  <button type="button" class="btn btn-success" href="mailto:goodfe@yahoo.com">Send me Email</button>
 </p>
 <div class="collapse" id="collapseExample">
   <div class="card card-body">
