--- a/index.html
+++ b/index.html
@@ -31,26 +31,7 @@
 </head>
 
 <body oncontextmenu="return false">
-
-    <!-- ======= Mobile nav toggle button ======= -->
-    <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
-
-    <!-- ======= Header ======= -->
-    <header id="header" class="d-flex flex-column justify-content-center">
-
-        <nav class="nav-menu">
-            <ul>
-                <li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
-                <li><a href="http://github.com/bagusfe" target="_blank"><i class="bx bxl-github"></i> <span>GitHub</span></a></li>
-                <li><a href="https://drive.google.com/file/d/1J6ySlxpKvAmYqiy3s5xYXmwt8qB-j7UR/view?usp=sharing" target="_blank"><i class="bx bx-cloud-download"></i> <span>Download CV</span></a></li>
-                <li><a href="https://bagusfe.id/blog" target="_blank"><i class="bx bx-book"></i> <span>Read Blog</span></a></li>
-                <li><a href="https://toko.bagusfe.id" target="_blank"><i class="bx bx-store"></i> <span>My Store</span></a></li>
-                <li><a href="https://saweria.co/bagusfe" target="_blank"><i class="bx bx-money"></i> <span>Support</span></a></li>
-            </ul>
-        </nav>
-        <!-- .nav-menu -->
-
-		<nav id="navbar-example2" class="navbar navbar-light bg-light">
+<nav id="navbar-example2" class="navbar navbar-light bg-light">
 		  <a class="navbar-brand" href="#hero">home</a>
 		  <ul class="nav nav-pills">
 		    <li class="nav-item">
@@ -70,7 +51,24 @@
 		    </li>
 		  </ul>
 		</nav>
+		<div data-spy="scroll" data-target="#navbar-example2" data-offset="0">
+    <!-- ======= Mobile nav toggle button ======= -->
+    <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
 
+    <!-- ======= Header ======= -->
+    <header id="header" class="d-flex flex-column justify-content-center">
+
+        <nav class="nav-menu">
+            <ul>
+                <li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
+                <li><a href="http://github.com/bagusfe" target="_blank"><i class="bx bxl-github"></i> <span>GitHub</span></a></li>
+                <li><a href="https://drive.google.com/file/d/1J6ySlxpKvAmYqiy3s5xYXmwt8qB-j7UR/view?usp=sharing" target="_blank"><i class="bx bx-cloud-download"></i> <span>Download CV</span></a></li>
+                <li><a href="https://bagusfe.id/blog" target="_blank"><i class="bx bx-book"></i> <span>Read Blog</span></a></li>
+                <li><a href="https://toko.bagusfe.id" target="_blank"><i class="bx bx-store"></i> <span>My Store</span></a></li>
+                <li><a href="https://saweria.co/bagusfe" target="_blank"><i class="bx bx-money"></i> <span>Support</span></a></li>
+            </ul>
+        </nav>
+        <!-- .nav-menu -->
 
     </header>
     <!-- End Header -->
