--- a/index.html
+++ b/index.html
@@ -378,9 +378,9 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
+                    <div class="col-lg-12 d-flex justify-content-center btn btn-primary" data-aos="fade-up" data-aos-delay="100">
                         <ul id="portfolio-flters">
-                            <li data-filter="*" class="filter-active">All</li>
+                            <!-- <li data-filter="*" class="filter-active">All</li> -->
                             <li data-filter=".filter-award">Awards</li>
                             <li data-filter=".filter-campuss">Campuss</li>
                             <li data-filter=".filter-certificate">Certificates</li>
@@ -497,7 +497,7 @@
         </section>
         <!-- End Portfolio Section -->
         <p>
-        
+
         </p>
 
     </main>
