--- a/index.html
+++ b/index.html
@@ -378,12 +378,12 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-lg-12 d-flex justify-content-center btn btn-primary" data-aos="fade-up" data-aos-delay="100">
+                    <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
                         <ul id="portfolio-flters">
                             <!-- <li data-filter="*" class="filter-active">All</li> -->
-                            <li data-filter=".filter-award">Awards</li>
-                            <li data-filter=".filter-campuss">Campuss</li>
-                            <li data-filter=".filter-certificate">Certificates</li>
+                            <li class="btn btn-primary" data-filter=".filter-award">Awards</li>
+                            <li class="btn btn-primary" data-filter=".filter-campuss">Campuss</li>
+                            <li class="btn btn-primary" data-filter=".filter-certificate">Certificates</li>
                         </ul>
                     </div>
                 </div>
