--- a/index.html
+++ b/index.html
@@ -376,11 +376,11 @@
                     <h2>Portfolio</h2>
                     <p>Some achievement (award) and project that I've worked on.</p>
                 </div>
-
+<!-- id="portfolio-flters" -->
                 <div class="row">
                     <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
-                        <ul id="portfolio-flters">
-                            <!-- <li data-filter="*" class="filter-active">All</li> -->
+                        <ul>
+                            <li data-filter="*" class="filter-active">All</li>
                             <li class="btn btn-primary" data-filter=".filter-award">Awards</li>
                             <li class="btn btn-primary" data-filter=".filter-campuss">Campuss</li>
                             <li class="btn btn-primary" data-filter=".filter-certificate">Certificates</li>
