--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                 <div class="row">
                     <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
                         <ul>
-                            <li data-filter="*" class="filter-active">All</li>
+                            <!-- <li data-filter="*" class="filter-active">All</li> -->
                             <li class="btn btn-primary" data-filter=".filter-award">Awards</li>
                             <li class="btn btn-primary" data-filter=".filter-campuss">Campuss</li>
                             <li class="btn btn-primary" data-filter=".filter-certificate">Certificates</li>
