--- a/index.html
+++ b/index.html
@@ -101,27 +101,27 @@
 						<div class="collapse" id="collapseExample">
 						  <div class="card card-body">
 						    <div class="row">
-						    <div class="col-lg-6">
-                                <ul>
-                                    <li><i class="icofont-rounded-right"></i> <strong>Name		:</strong> Bagus Frayoga E, S.T</li>
-                                    <li><i class="icofont-rounded-right"></i> <strong>Gender		:</strong> Male</li>
-                                    <li><i class="icofont-rounded-right"></i> <strong>Height		:</strong> 162 cm</li>
-                                    <li><i class="icofont-rounded-right"></i> <strong>Weight		:</strong> 60 kg</li>
-                                    <li><i class="icofont-rounded-right"></i> <strong>Married Status			:</strong> Single</li>
-                                    <li><i class="icofont-rounded-right"></i> <strong>Nationality		:</strong> Indonesian</li>
-                                </ul>
-                            </div>
-                            <div class="col-lg-6">
-                                <ul>
-                                    <li><i class="icofont-rounded-right"></i> <strong>Drive License		:</strong> C (motorbike)</li>
-                                    <li><i class="icofont-rounded-right"></i> <strong>Languages	:</strong>Bahasa Indonesia, English</li>
-                                    <li><i class="icofont-rounded-right"></i> <strong>E-mail		:</strong> <a href="mailto:goodfe@yahoo.com">goodfe@yahoo.com</a></li>
-                                    <li><i class="icofont-rounded-right"></i> <strong>Website 	:</strong> <a href="https://bagusfe.id/blog">bagusfe.id</a></li>
-                                </ul>
-                            </div>
-                        </div>
-  </div>
-</div>
+							    <div class="col-lg-6">
+	                                <ul>
+	                                    <li><i class="icofont-rounded-right"></i> <strong>Name		:</strong> Bagus Frayoga E, S.T</li>
+	                                    <li><i class="icofont-rounded-right"></i> <strong>Gender		:</strong> Male</li>
+	                                    <li><i class="icofont-rounded-right"></i> <strong>Height		:</strong> 162 cm</li>
+	                                    <li><i class="icofont-rounded-right"></i> <strong>Weight		:</strong> 60 kg</li>
+	                                    <li><i class="icofont-rounded-right"></i> <strong>Married Status			:</strong> Single</li>
+	                                    <li><i class="icofont-rounded-right"></i> <strong>Nationality		:</strong> Indonesian</li>
+	                                </ul>
+	                            </div>
+	                            <div class="col-lg-6">
+	                                <ul>
+	                                    <li><i class="icofont-rounded-right"></i> <strong>Drive License		:</strong> C (motorbike)</li>
+	                                    <li><i class="icofont-rounded-right"></i> <strong>Languages	:</strong>Bahasa Indonesia, English</li>
+	                                    <li><i class="icofont-rounded-right"></i> <strong>E-mail		:</strong> <a href="mailto:goodfe@yahoo.com">goodfe@yahoo.com</a></li>
+	                                    <li><i class="icofont-rounded-right"></i> <strong>Website 	:</strong> <a href="https://bagusfe.id/blog">bagusfe.id</a></li>
+	                                </ul>
+	                            </div>
+                        	</div>
+  						  </div>
+						</div>
                         
                         <!-- <p>
                             ...
@@ -373,9 +373,9 @@
 				<div class="collapse" id="collapseExample">
 				  <div class="card card-body">
 				    <div class="section-title">
-                    <h2>Portfolio</h2>
-                    <p>Some achievement (award) and project that I've worked on.</p>
-                </div>
+                    	<h2>Portfolio</h2>
+                    	<p>Some achievement (award) and project that I've worked on.</p>
+                	</div>
 <!--  -->
                 <div class="row">
                     <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
@@ -487,8 +487,36 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-certificate">
+                        <div class="portfolio-wrap">
+                            <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+                            <div class="portfolio-info">
+                                <h4>Dicoding.com | Object-Oriented Programming </h4>
+                                <p>Online Course: Learned S.O.L.I.D Programming Principle </p>
+                                <div class="portfolio-links">
+                                    <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox" title="View Photo"><i class="bx bx-plus"></i></a>
+                                    <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-certificate">
+                        <div class="portfolio-wrap">
+                            <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+                            <div class="portfolio-info">
+                                <h4>Dicoding.com | Object-Oriented Programming </h4>
+                                <p>Online Course: Learned S.O.L.I.D Programming Principle </p>
+                                <div class="portfolio-links">
+                                    <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox" title="View Photo"><i class="bx bx-plus"></i></a>
+                                    <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
+            	</div>
+        	</div>
 
             </div>
         </section>
