--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 		                    </div>
 		                </div>
 <!-- class="row portfolio-container" -->
-		                <div  data-aos="fade-up" data-aos-delay="200">
+		                <div  class="row" data-aos="fade-up" data-aos-delay="200">
 
 		                    <div class="col-lg-4 col-md-6 portfolio-item filter-award">
 		                        <div class="portfolio-wrap">
