--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 							    Information
 							  </button>
 							  <a href="mailto:goodfe@yahoo.com">
-							  <button type="button" class="btn btn-success bx bx-money">Send me Email</button></a>
+							  <button type="button" class="btn btn-success">Send me Email</button></a>
 						</p>
 						<div class="collapse" id="collapseExample">
 						  <div class="card card-body">
@@ -512,9 +512,12 @@
         </div>
     </footer>
     <!-- End Footer -->
- <a href="#" class="back-to-top"><i class="bx bx-up-arrow-alt"></i></a>
- <a href="#" class="float-download" data-toggle="tooltip" data-placement="left" title="Download CV"><i class="bx bx-cloud-download"></i></a>
- <a href="#" class="float-blog" data-toggle="tooltip" data-placement="left" title="Visit my blog"><i class="bx bx-book"></i></a>
+  
+ <a href="#hero" class="back-to-top"><i class="bx bx-home"></i></a>
+ <a href="#about" class="float-about"><i class="bx bx-user"></i></a>
+ <a href="#resume" class="float-resume"><i class="bx bx-file-blank"></i></a>
+ <a href="#skills" class="float-skills"><i class="bx bx-cloud-download"></i></a>
+ <a href="#portfolio" class="float-portfolio"><i class="bx bx-book-content"></i></a>
 
     
     <!-- Vendor JS Files -->
