--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
                 <div class="section-title">
                     <h2>Skills</h2>
-                    <p>I have some skills to support my professional work. I love to learn a new thing or learn more deeper an existing skills to enrich my knowledge so that I can keep improve with the dynamic progress of IT world. </p>
+                    <p>I have some skills to support my professional work. I love to learn a new thing or learn more deeper an existing skills to enrich my knowledge so that I can keep improve with the dynamic progress of IT world. Ranges Value (Beginner, Intermediate, Advanced). </p>
                 </div>
 
                 <div class="row skills-content">
@@ -284,33 +284,51 @@
                         <div class="progress">
                             <span class="skill">HTML <i class="val">80%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">Intermediate</div>
                             </div>
                         </div>
 
                         <div class="progress">
                             <span class="skill">CSS <i class="val">70%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">Intermediate</div>
                             </div>
                         </div>
 
                         <div class="progress">
-                            <span class="skill">JavaScript <i class="val">75%</i></span>
+                            <span class="skill">JavaScript<i class="val">73%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="73" aria-valuemin="0" aria-valuemax="100">Intermediate</div>
                             </div>
                         </div>
                         <div class="progress">
                             <span class="skill">Web <i class="val">75%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Intermediate</div>
+                            </div>
+                        </div>
+                        <div class="progress ">
+                            <span class="skill">RESTful API <i class="val">65%</i></span>
+                            <div class="progress-bar-wrap">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">Intermediate</div>
                             </div>
                         </div>
                         <div class="progress">
-                            <span class="skill">RESTful API <i class="val">75%</i></span>
+                            <span class="skill">React Native <i class="val">75%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Intermediate</div>
+                            </div>
+                        </div>
+                        <div class="progress">
+                            <span class="skill">XCode<i class="val">45%</i></span>
+                            <div class="progress-bar-wrap">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100">Beginner</div>
+                            </div>
+                        </div>
+                        <div class="progress">
+                            <span class="skill">SwiftUI 5.2<i class="val">45%</i></span>
+                            <div class="progress-bar-wrap">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100">Beginner</div>
                             </div>
                         </div>
 
@@ -320,35 +338,46 @@
                     <div class="col-lg-6">
 
                         <div class="progress">
-                            <span class="skill">React Native <i class="val">80%</i></span>
-                            <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                        </div>
-
-                        <div class="progress">
                             <span class="skill">Microcontroller <i class="val">90%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">Advanced</div>
                             </div>
                         </div>
                         <div class="progress">
-                            <span class="skill">Sensor <i class="val">90%</i></span>
+                            <span class="skill">Sensor <i class="val">75%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Intermediate</div>
                             </div>
                         </div>
 
                         <div class="progress">
-                            <span class="skill">Photoshop <i class="val">70%</i></span>
+                            <span class="skill">Photoshop <i class="val">65%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">Intermediate</div>
                             </div>
                         </div>
                         <div class="progress">
-                            <span class="skill">Internet of Things (IoT) <i class="val">70%</i></span>
+                            <span class="skill">Internet of Things (IoT) <i class="val">80%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">Advanced</div>
+                            </div>
+                        </div>
+                        <div class="progress">
+                            <span class="skill">AutoCAD 2D <i class="val">65%</i></span>
+                            <div class="progress-bar-wrap">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">Intermediate</div>
+                            </div>
+                        </div>
+                        <div class="progress">
+                            <span class="skill">Programmable Logic Control (PLC) (Omron) <i class="val">70%</i></span>
+                            <div class="progress-bar-wrap">
+                                <div class="progress-bar" role="progressbar"  aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">Intermediate</div>
+                            </div>
+                        </div>
+                        <div class="progress">
+                            <span class="skill">Microsoft Office <i class="val">90%</i></span>
+                            <div class="progress-bar-wrap">
+                                <div class="progress-bar" role="progressbar"  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">Advanced</div>
                             </div>
                         </div>
 
@@ -514,7 +543,7 @@
     <!-- End Footer -->
   
  <a href="#hero" class="back-to-top"><i class="bx bx-home"></i></a>
- <a href="#about" class="float-about"><i class="bx bx-user"></i></a>
+ <a href="#about" class="float-about" data-toggle="tooltip" data-placement="left" title="Tooltip on left"><i class="bx bx-user"></i></a>
  <a href="#resume" class="float-resume"><i class="bx bx-file-blank"></i></a>
  <a href="#skills" class="float-skills"><i class="bx bx-cloud-download"></i></a>
  <a href="#portfolio" class="float-portfolio"><i class="bx bx-book-content"></i></a>
