--- a/index.html
+++ b/index.html
@@ -511,6 +511,34 @@
 		                        </div>
 		                    </div>
 
+                            <div class="col-lg-4 col-md-6 portfolio-item filter-certificate">
+                                <div class="portfolio-wrap">
+                                    <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
+                                    <div class="portfolio-info">
+                                        <h4>Course at SkillAcademy.com</h4>
+                                        <p>Langkah menjadi YouTuber Profesional bersama Gita Savitri</p>
+                                        <div class="portfolio-links">
+                                            <a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox" title="View Photo"><i class="bx bx-plus"></i></a>
+                                            <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-4 col-md-6 portfolio-item filter-certificate">
+                                <div class="portfolio-wrap">
+                                    <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
+                                    <div class="portfolio-info">
+                                        <h4>Course at Sanbercode.com | Mobile Developer </h4>
+                                        <p>Online Course: React Native Developer</p>
+                                        <div class="portfolio-links">
+                                            <a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox" title="View Photo"><i class="bx bx-plus"></i></a>
+                                            <a href="portfolio-details-sanbercode.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
 		                </div>
                 
 
