--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta name="robots" content="noindex" />
 
     <title>Bagus Frayoga Effendi | an Online Resume</title>
     <meta content="" name="an resume online by Bagus Frayoga Effendi. ">
