--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html class="staticrypt-html">
 <head>
+    document.addEventListener('contextmenu', event => event.preventDefault());
     <meta charset="utf-8">
     <title>Sorry, Protected Resume.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -122,7 +123,7 @@
     <div class="staticrypt-form">
         <div class="staticrypt-instructions">
             <p class="staticrypt-title">Protected Resume</p>
-		<p>I am sorry. You need a password to open the resume. Please send an <a href="mailto:halo@bagusfe.com">Email</a> for a password to open it. Thank you :)</p>
+		<p>I am sorry. You need a password to open the resume. Please send an <a href="mailto:halo@bagusfe.com">Email</a> to get a password to open it. Thank you :)</p>
             <p></p>
         </div>
 
